# pkd

./: .editorconfig  .gitignore  README.md  license.txt  pyproject.toml
docs/: design-system.md
pkd/: hooks.py  modules.txt
pkd/api/: _debt_gl.py  _metrics.py  actions.py  admin.py  channel.py  customer.py  debt.py  display.py  explore.py  geo.py  governance.py  manager.py  npp_payment.py  overview.py  report.py  targets.py  tet.py  utils.py
pkd/fixtures/: role.json
pkd/pkd/doctype/channel_sales_target/: channel_sales_target.json  channel_sales_target.py
pkd/pkd/doctype/channel_sales_target_item/: channel_sales_target_item.json  channel_sales_target_item.py
pkd/pkd/doctype/pkd_settings/: pkd_settings.json  pkd_settings.py
pkd/public/pkd/: shell.css  shell.js
pkd/public/pkd/components/: banner.js  bottom-nav.js  chart.js  data-table.js  empty-state.js  governance.js  loading.js  modal.js  ql-nav.js  sales-matrix.js  season-picker.js  toast.js  vn-map.js
pkd/public/pkd/data/: vn34.geo.json
pkd/public/pkd/lib/: api.js  dom.js  format.js  router.js  store.js
pkd/public/pkd/views/: _soon.js  chitieu.js  dulich.js  khach.js  khampha.js  mt.js  npp-thanhtoan.js  npp.js  ql-alert.js  ql-debt.js  ql-ds.js  ql-khach.js  ql-sanpham.js  ql-target.js  ql-tongquan.js  quantri.js  tet.js  them.js  tongquan.js  trungbay.js
pkd/www/: kd.html  kd.py
tests/: smoke.md
