[project]
name = "pkd"
authors = [{ name = "Hoang Giang JSC", email = "chien@1nguoi.com" }]
description = "Dashboard điều hành Phòng Kinh doanh RVHG (Frappe/ERPNext v16 custom app)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pkd"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
